--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "laravel-elixir-browsersync",
-  "version": "0.1.0",
+  "version": "0.1.2",
   "description": "Laravel Elixir Browser Sync Extension",
   "main": "index.js",
   "scripts": {
@@ -25,6 +25,7 @@
   "dependencies": {
     "browser-sync": "^2.2.5",
     "gulp-notify": "^2.2.0",
-    "underscore": "^1.8.2"
+    "underscore": "^1.8.2",
+    "run-sequence": "^1.1.0",
   }
 }
